--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "react-native-swipe-list-view",
-    "version": "3.2.5",
+    "version": "3.3.0",
     "main": "lib/index.js",
     "author": "Jesse Sessler <jesse.sessler@gmail.com>",
     "description": "A ListView with rows that swipe open and closed.",
@@ -9,7 +9,7 @@
         "dev": "node bin/dev.js && cd SwipeListExample && npm run start",
         "prettier": "prettier --write --loglevel=warn \"**/*.js\"",
         "lint": "eslint **/*.js",
-        "fix": "yarn run prettier && yarn run lint"
+        "fix": "npm run prettier && npm run lint"
     },
     "repository": {
         "type": "git",
@@ -33,13 +33,17 @@
         "react-native": ">=0.23.1"
     },
     "devDependencies": {
+        "@babel/eslint-parser": "^7.5.4",
+        "@babel/preset-react": "^7.26.3",
         "@types/react": "^16.8.20",
         "@types/react-native": "^0.57.63",
-        "babel-eslint": "^10.0.3",
-        "eslint": "^6.5.1",
-        "eslint-config-prettier": "^6.3.0",
-        "eslint-plugin-prettier": "^3.1.1",
-        "eslint-plugin-react": "^7.16.0",
-        "prettier": "1.18.2"
+        "eslint": "^8.57.1",
+        "eslint-config-prettier": "^10.0.1",
+        "eslint-plugin-flowtype": "^8.0.3",
+        "eslint-plugin-prettier": "^5.2.3",
+        "eslint-plugin-react": "^7.37.4",
+        "prettier": "3.4.2",
+        "react": "18.0.0",
+        "react-native": "0.69.12"
     }
 }
